unpackaged/main/default/objects/Article_Submission__c/Article_Submission__c.object-meta.xml
<CustomObject>
    <description>Staged Knowledge-article submission authored in the Admin Console by contributors without a Knowledge User license. The licensed Knowledge user reviews and promotes it into a real Knowledge__kav draft via ArticleSubmissionController.promote().</description>
    <label>Article Submission</label>
    <nameField>
        <label>Article Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Article Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>