unpackaged/main/default/objects/Article_Submission__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>FAQ-only search signal; maps to Knowledge__kav.Answer__c on promotion.</description>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>