unpackaged/main/default/objects/Article_Submission__c/fields/Category_Names__c.field-meta.xml
<CustomField>
    <fullName>Category_Names__c</fullName>
    <description>Help_Topics data-category API names, one per line (written by the console&#39;s category tree; validated on promotion).</description>
    <label>Help Topic Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>