unpackaged/main/default/objects/Article_Submission__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Rich-text article body; maps to Knowledge__kav.Content__c on promotion.</description>
    <label>Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>