unpackaged/main/default/objects/Article_Submission__c/fields/Embed_URL__c.field-meta.xml
<CustomField>
    <fullName>Embed_URL__c</fullName>
    <description>Optional https:// embed link; maps to Knowledge__kav.Embed_URL__c on promotion.</description>
    <label>Embed URL</label>
    <type>Url</type>
</CustomField>