unpackaged/main/default/objects/Article_Submission__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>Search-boost keywords; maps to Knowledge__kav.Keywords__c on promotion.</description>
    <label>Keywords</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>