unpackaged/main/default/objects/Article_Submission__c/fields/Promoted_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Promoted_Article_Id__c</fullName>
    <description>Version-stable KnowledgeArticleId of the article this submission became.</description>
    <label>Promoted Article Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>