unpackaged/main/default/objects/Article_Submission__c/fields/Proposed_UrlName__c.field-meta.xml
<CustomField>
    <fullName>Proposed_UrlName__c</fullName>
    <description>Slugified URL name the article will get on promotion (uniqueness is re-checked then).</description>
    <label>Proposed URL Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>