unpackaged/main/default/objects/Article_Submission__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>FAQ-only search signal; maps to Knowledge__kav.Question__c on promotion.</description>
    <label>Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>