unpackaged/main/default/objects/Article_Submission__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>Knowledge record type (DeveloperName) the promoted article should get.</description>
    <label>Article Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Core Knowledge</label>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>How_To</fullName>
                <label>How-To</label>
            </value>
            <value>
                <fullName>Troubleshooting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>