unpackaged/main/default/objects/Article_Submission__c/fields/Related_Resource_Ids__c.field-meta.xml
<CustomField>
    <fullName>Related_Resource_Ids__c</fullName>
    <description>Resource__c record Ids to link on promotion, one per line, in display order (written by the console&#39;s resource linker — never hand-typed).</description>
    <label>Related Resource Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>