unpackaged/main/default/objects/Article_Submission__c/fields/Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Review_Notes__c</fullName>
    <description>Reviewer feedback shown to the contributor when changes are requested.</description>
    <label>Review Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>