unpackaged/main/default/objects/Article_Submission__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Submission workflow state. Draft → Submitted → Promoted, with Changes requested as the reviewer&#39;s bounce-back.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <label>Submitted for review</label>
            </value>
            <value>
                <fullName>Changes requested</fullName>
            </value>
            <value>
                <fullName>Promoted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>