unpackaged/main/default/objects/Article_Submission__c/fields/Suggested_UrlNames__c.field-meta.xml
<CustomField>
    <fullName>Suggested_UrlNames__c</fullName>
    <description>Curated suggested-article UrlNames, one per line; maps to Knowledge__kav.Suggested_Articles__c on promotion.</description>
    <label>Suggested Article URL Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>